# graph-memory

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.en.md  README.md  README_EN.md  docker-compose.yml  mcp_client_demo.py  mcp_server.py  pyproject.toml  requirements.txt
DESIGN/: ANALYSE_RISQUES_SECURITE.md  INTEGRATION_CLINE_VSCODE.md  SPECIFICATION.md
ONTOLOGIES/: cloud.yaml  general.yaml  legal.yaml  managed-aiops.yaml  software-development.yaml
benchmarks/: __init__.py
benchmarks/locomo/: README.md  __init__.py  data_loader.py  models.py  run_benchmark.py
benchmarks/locomo/adapters/: __init__.py
benchmarks/locomo/metrics/: __init__.py
benchmarks/locomo/tasks/: __init__.py  event_summarization.py  question_answering.py
data/: README.md
memory-bank/: activeContext.md  progress.md
results/: locomo_qa_conv26.json
scripts/: README.en.md  README.md  audit_ontology.py  check_param_descriptions.py  cleanup_and_reingest.py  mcp_cli.py  test_rag_thresholds.py  test_rate_limit.sh  test_recette.py  test_service.py  view_graph.py
scripts/cli/: __init__.py  client.py  commands.py  display.py  ingest_progress.py  shell.py
scripts/tests/: __init__.py  test_backup.py  test_cleanup.py  test_documents.py  test_memories.py  test_search.py  test_system.py  test_tokens.py
src/: __init__.py
src/mcp_memory/: __init__.py  __main__.py  config.py  server.py
src/mcp_memory/auth/: __init__.py  context.py  middleware.py  token_manager.py
src/mcp_memory/core/: __init__.py  backup.py  chunker.py  embedder.py  extractor.py  graph.py  models.py  ontology.py  storage.py  vector_store.py
src/mcp_memory/static/: graph.html
src/mcp_memory/static/css/: graph.css
src/mcp_memory/static/js/: api.js  app.js  ask.js  config.js  graph.js  sidebar.js
src/mcp_memory/tools/: __init__.py
starter-kit/: README.md
starter-kit/boilerplate/: docker-compose.yml  requirements.txt
starter-kit/boilerplate/scripts/cli/: client.py
starter-kit/boilerplate/src/mon_service/: server.py
starter-kit/boilerplate/src/mon_service/auth/: middleware.py
starter-kit/boilerplate/waf/: Caddyfile
tests/: conftest.py
waf/: Caddyfile  Dockerfile
