# =============================================================================
# MCP Memory Service — pyproject.toml
# =============================================================================
# Gestion des dépendances via uv (https://docs.astral.sh/uv/)
#
#   uv sync                      # Installer les dépendances
#   uv run python -m src.mcp_memory.server  # Lancer le serveur
#   uv add <package>             # Ajouter une dépendance
#   uv lock                      # Régénérer le lockfile
# =============================================================================

[project]
name = "mcp-memory"
version = "1.3.7"
description = "MCP Memory Service — Knowledge Graph Memory for AI Agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Cloud Temple" }]
requires-python = ">=3.11"

dependencies = [
    # === MCP SDK ===
    "mcp>=1.0.0",
    # === Web Framework (pour FastMCP HTTP/SSE) ===
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "starlette>=0.27.0",
    # === HTTP Client (async) ===
    "httpx>=0.27.0",
    # === Neo4j Driver ===
    "neo4j>=5.0.0",
    # === Qdrant Vector DB ===
    "qdrant-client>=1.9.0",
    # === S3 Client (AWS SDK) ===
    "boto3>=1.28.0",
    # === OpenAI-compatible client (pour LLMaaS) ===
    "openai>=1.0.0",
    # === Configuration ===
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # === Utilitaires ===
    "tenacity>=8.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "PyYAML>=6.0",
    # === Document Processing ===
    "python-docx>=0.8.11",
    "pypdf>=3.0.0",
    # === HTML Processing ===
    "beautifulsoup4>=4.12.0",
    # === CLI ===
    "click>=8.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",

    # === NLP — Stop words (fr, en, …) ===
    "stop-words>=2025.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_memory"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",  # line-too-long — géré par ruff format, pas le linter
    "E402",  # module-import-not-at-top-of-file — nécessaire pour certains patterns (lazy init, config)
    "E722",  # bare-except — toléré dans le code legacy (token_manager)
    "F841",  # unused-variable — faux positifs sur les record = await result.single()
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
