[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-memory"
version = "1.6.0"
description = "MCP Memory Service - Knowledge Graph Memory for AI Agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Cloud Temple" },
]
keywords = ["mcp", "memory", "knowledge-graph", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.8.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "starlette>=0.27.0",
    "httpx>=0.27.0",
    "neo4j>=5.0.0",
    "qdrant-client>=1.9.0",
    "boto3>=1.28.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "PyYAML>=6.0",
    "python-docx>=0.8.11",
    "pypdf>=3.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
mcp-memory = "mcp_memory.server:main"

[project.urls]
Homepage = "https://github.com/cloudtemple/mcp-memory"
Repository = "https://github.com/cloudtemple/mcp-memory"

# --- Build configuration ---

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_memory"]

# --- Dependency groups (PEP 735, native uv support) ---

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]
cli = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "prompt-toolkit>=3.0.0",
]

# --- Tool configuration ---

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mcp_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
